# AMR-Project

./: README.md
amr_controller/: CMakeLists.txt  package.xml
amr_controller/amr_controller/: delivery_box_stabilizer.py  motor_controller.py  noisy_controller.py
amr_controller/config/: amr_controllers.yaml  joy_config.yaml  joy_teleop.yaml
amr_controller/launch/: controller.launch.py  joystick_teleop.launch.py
amr_description/: CMakeLists.txt  package.xml
amr_description/launch/: display.launch.py  gazebo.launch.py
amr_description/meshes/: back_link_left_side.stl  back_link_right_side.stl  base_link.stl  connector.stl  delivery_box.stl  delivery_box_wl.stl  delivery_box_wol.stl  front_link_left_side.stl  front_link_right_side.stl  front_wheel_left_side.stl  front_wheel_right_side.stl  middle_wheel_left_side.stl  middle_wheel_right_side.stl  prism_bottom_tab.stl  prism_top_tab.stl  prismatic_joint_bottom_hc.stl  prismatic_joint_top_sc.stl  stairs_mesh.stl  wconnector_left_side.stl  wconnector_right_side.stl
amr_description/urdf/: amr.urdf.xacro  amr_gazebo.xacro  amr_ros2_control.xacro
amr_description/worlds/: stairs.sdf
amr_localization/: CMakeLists.txt  package.xml
amr_localization/amr_localization/: kalman_filter.py
amr_localization/config/: ekf.yaml
amr_localization/launch/: local_localization.launch.py
notebooks/: agv_design.py
